--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="MainContent">
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="400" height="400"></canvas>
   </div>
 
   <!-- Scripts Section -------------------------------------------------- -->
