--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div id="MainContent">
+    <!-- made canvas size 500 x 500 for a large canvas to work with -->
     <canvas id="canvas" width="500" height="500"></canvas>
   </div>
 
